Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29463

Qt Creator 11 - can't debug using terminal

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • Qt Creator 11.0.0, Qt Creator 11.0.1
    • Debugger
    • None
    • Linux/Wayland
    • f13d9cc73 (11.0), 373886bc2 (11.0)

      I'm seeing the same error as in this report: https://forum.qt.io/topic/147260/qt-creator-11-can-t-debug-using-terminal

      I'm using Fedora 38, the problem persists in both creator 11.0.0 and 11.0.1

      Creating this new report as requested here https://bugreports.qt.io/browse/QTCREATORBUG-29231

      since the problem persists

        1. processstub.tar.gz
          29 kB
          Marcus Tillmanns
        2. qtcreator_process_stub.zip
          30 kB
          Marcus Tillmanns
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            madwinter Marcus Tillmanns
            thesourcehim Max Fedotov
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes